imported and cleaned data

--- a/World War 2 Weather Prediction - Linear Regression/World War 2.ipynb
+++ b/World War 2 Weather Prediction - Linear Regression/World War 2.ipynb
@@ -9,17 +9,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
-    "import matplotlob \n",
-    "import pyplot\n",
-    "import mpl_toolkits.mplot3d \n",
-    "import Axes3D"
+    "import csv\n",
+    "from matplotlib import pyplot\n",
+    "from mpl_toolkits.mplot3d import Axes3D"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = os.path.join(\"Data\",\"Summary of Weather.csv\")\n",
+    "raw_data = open(filename,'rt')\n",
+    "data = np.loadtxt(raw_data,delimiter=',',skiprows=1,usecols=(2,4,6,5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visiualizing and Cleaning up the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(119040,)\n",
+      "(119040, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = np.around(data)\n",
+    "y    = data[:,3]\n",
+    "X = data[:,:3]\n",
+    "print(y.shape)\n",
+    "print(X.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualizing the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
